--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "expo": "^54.0.17",
     "expo-constants": "~18.0.10",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-status-bar": "~3.0.8",
@@ -21,10 +23,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "undefined": "react-native-web\\",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
